# VulkanEngine

./: .gitignore  CMakeLists.txt  README.md
shaders/: compile.bat  slang.spv
src/: main.cpp
src/core/: globalvar.hpp
src/utils/: device.cpp  device.hpp  helper.cpp  helper.hpp
